--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.22.0"
+    "preact": "^10.22.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.8.2",
+    "@preact/preset-vite": "^2.8.3",
     "vite": "^5.3.1"
   }
 }
